添加上传资源

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -63,7 +63,7 @@ spring:
     time-zone: GMT+8
     serialization:
       write-dates-as-timestamps: false
-    
+
   # 文件上传配置
   servlet:
     multipart:
@@ -129,4 +129,7 @@ domain:
 app:
   jwt:
     secret: 8ZkP!xQ3@vT6$bN9#sF2&dR5*gH7^jK1+mU4%pL0(wE8)yA3
+
+resource:
+  path: /Users/king/flash_cast/
 
