--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-modal": "^3.16.3",
     "react-native": "0.72.6",
     "react-native-async-storage": "@react-native-async-storage/async-storage",
     "react-native-document-picker": "^9.1.1",
