--- a/ai_agent/pyproject.toml
+++ b/ai_agent/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
   "ffmpeg-python>=0.2.0",
   "dashscope>=1.15.0",
   "pyyaml>=6.0.0",
+  "playwright>=1.45"
 ]
 
 [project.optional-dependencies]
