工作流重构之前

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -124,7 +124,11 @@ springdoc:
 
 domain:
   comfy: http://localhost:8081
-  ai-server: http://localhost:8081
+  ai-server: http://localhost:8000
+  running-hub: https://www.runninghub.cn
+
+running-hub:
+  api-key:
 
 app:
   jwt:
