前三个已经差不多了

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -152,5 +152,5 @@ app:
     secret: 8ZkP!xQ3@vT6$bN9#sF2&dR5*gH7^jK1+mU4%pL0(wE8)yA3
 
 resource:
-  path: /Users/king/resources/
+  path: /Users/king/resources
 
